fix: 修复java8兼容性